# MollenOS

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  BUILDING.md  Build.bat  BuildAll.bat  BuildAllImg.bat  BuildAllLive.bat  BuildAllVmdk.bat  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  Dockerfile  MollenOS.sln  README.md  README.txt  azure-pipelines-i386.yml  azure-pipelines-verify.yml  azure-pipelines.yml  build.Dockerfile  circle.yml  depends.sh  init.sh  install_os.bat  makefile  mollenos.sln  nightly.Dockerfile  revision.h  sdk-c.yaml  serial.txt  sonar-project.properties  vali.yaml
apps/: CMakeLists.txt  osstat.c  systat.c
boot/: CMakeLists.txt  ap.asm  makefile
boot/Stage2/: Stage2.asm  ssbl.stm
boot/bios/: CMakeLists.txt  mbr-gpt.asm  mbr.asm
boot/include/: vboot.h
boot/stage2/: ap.asm  stage2.asm  stage2.sys
boot/uefi/: CMakeLists.txt  Makefile  console.c  depack.c  library.c  loader.c  main.c  video.c
kernel/: CMakeLists.txt  README.md  crc32.c  debug.c  deviceio.c  events.c  garbagecollector.c  handle.c  handle_set.c  heap.c  init.c  interrupts.c  interrupts_handlers.c  interrupts_table.c  ipc.c  machine.c  makefile  memorybuffer.c  memoryspace.c  modules.c  pipe.c  scheduler.c  threading.c  time.c  timers.c
kernel/Arch/: Arch.h
kernel/Common/: Bitmap.c  List.c  MString.c  RingBuffer.c
kernel/Include/: AcpiInterface.h  Bitmap.h  CriticalSection.h  DeviceManager.h  Events.h  GarbageCollector.h  Heap.h  InputManager.h  List.h  Log.h  MString.h  MollenOS.h  Mutex.h  Pipe.h  Process.h  ProcessManager.h  RingBuffer.h  Scheduler.h  Semaphore.h  Server.h  Shm.h  Threading.h  Timers.h  VirtualKeyCodes.h
kernel/Init/: Entry.c  MollenOS - Shortcut.lnk
kernel/Msvc/: MollenOS.sln
kernel/System/: DeviceManager.c  Events.c  GarbageCollector.c  Heap.c  InputManager.c  Log.c  Phoenix.c  Pipe.c  Process.c  ProcessManager.c  Scheduler.c  Shm.c  Signal.c  Syscalls.c  Threading.c  Timers.c  UserEvents.c  Vfs.c
kernel/acpi/: CMakeLists.txt  acpi.c  early_init.c  functions.c  handlers.c  hpet.c  init.c  interrupts.c  irq.c  osl.c  scan.c  tableparser.c  tables.c
kernel/acpica/: makefile  oslmos.c
kernel/api/: CMakeLists.txt  entry.c  handles.c  memory.c  misc.c  priv.c  threads.c
kernel/arch/: CMakeLists.txt  arch.h  makefile
kernel/common/: bitmap.c  list.c  ringbuffer.c
kernel/components/: CMakeLists.txt  cpu.c  cpu_private.h  domain.c  ic.c  memory.c  scheduler.c  timer.c
kernel/include/: acpiinterface.h  atomicsection.h  bitmap.h  console.h  crc32.h  criticalsection.h  debug.h  deviceio.h  devicemanager.h  events.h  futex.h  garbagecollector.h  handle.h  handle_set.h  heap.h  hpet.h  input_manager.h  inputmanager.h  interrupts.h  ipc_arena.h  ipc_context.h  irq_spinlock.h  list.h  log.h  machine.h  memory_region.h  memorybuffer.h  memoryspace.h  mollenos.h  multiboot.h  mutex.h  pipe.h  revision.h  ringbuffer.h  scheduler.h  semaphore.h  semaphore_global.h  semaphore_slim.h  shm.h  spinlock.h  (+6 more)
kernel/init/: entry.c
kernel/memory/: CMakeLists.txt  heap.c  memory.c  memory_region.c  memory_space.c  memoryregion.c  memoryspace.c  ms_allocations.c  ms_allocations_test.c  ms_context.c  ms_context_test.c  ms_create.c  ms_map.c  ms_map_test.c  ms_shm.c  ms_shm_test.c  ms_struct.c  ms_sync.c  ms_unmap.c  ms_utils.c  private.h  shm.c
kernel/modules/: CMakeLists.txt  manager.c  module.c  phoenix.c  phoenix_process.c  ramdisk.c  signal.c
kernel/msvc/: MollenOS.sln
kernel/output/: CMakeLists.txt  console.c  log.c
kernel/process/: ash.c  loadfile.c  phoenix.c  phoenix_pipes.c  phoenix_process.c  process.c  server.c  signal.c  syscalls.c
kernel/scheduling/: CMakeLists.txt  futex.c  ipc.c  ipc_arena.c  ipc_context.c  irq_spinlock.c  mutex.c  scheduler.c  semaphore.c  signal.c  spinlock.c  threading.c  threading_private.h  userevent.c
kernel/sync/: CMakeLists.txt  mutex.c  semaphore.c  signal.c
kernel/synchronization/: atomicsection.c  criticalsection.c  mutex.c  semaphore.c  semaphore_global.c  semaphore_slim.c  vaultlock.c
kernel/system/: crc32.c  debug.c  events.c  garbagecollector.c  heap.c  interrupts.c  log.c  modules.c  pipe.c  scheduler.c  semaphore.c  threading.c  timers.c  userevents.c
kernel/system_api/: CMakeLists.txt  driver_api.c  entry.c  memory_api.c  ossupport_api.c  sharedobject_api.c  synchonization_api.c  system_api.c  thread_api.c  time_api.c
kernel/system_calls/: driver_calls.c  entry.c  ipc_calls.c  memory_calls.c  module_calls.c  ossupport_calls.c  process_calls.c  sharedobject_calls.c  synchonization_calls.c  system_calls.c  table.c  thread_calls.c
kernel/tests/: data_structures_tests.c  synchronization_tests.c  synchronizationtests.c  test_manager.c
kernel/threads/: CMakeLists.txt  private.h  threads.c
kernel/utils/: CMakeLists.txt  bootstrapper.c  crc32.c  dynamic_memory_pool.c  memory_stack.c  static_memory_pool.c
librt/: CMakeLists.txt  makefile
librt/include/: __libunwind_config.h  ammintrin.h  arm_neon.h  assert.h  cmath  complex.h  crtdefs.h  ctype.h  emmintrin.h  endian.h  errno.h  inttypes.h  io.h  limits.h  locale.h  malloc.h  math.h  mmintrin.h  omp.h  setjmp.h  signal.h  smmintrin.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  threads.h  time.h  tmmintrin.h  wchar.h  wctype.h
librt/libacpi/: makefile
librt/libasgaard/: application.cpp  (+2 more)
modules/: CMakeLists.txt  InitRd.mos  InitRd32.mos  Modules.sln  makefile
services/: CMakeLists.txt  makefile
testing/: CMakeLists.txt  common.h  map_parser_test.c  run-tests.sh
tests/: CMakeLists.txt  makefile
tools/: CMakeLists.txt  Vali.cmake  build_clang.sh  build_clang_standalone.sh  build_toolchain.sh  checkout.sh  ci-nightly.sh  depends.sh  dotnet-install.sh  get_toolchain.sh  makefile_mesa  release.py  setup.bochsrc  utils.py  vali-cross.cmake  vali.cmake  vali_target.diff  valicc-ASM.cmake  valicc-C.cmake  valicc-CXX.cmake  valicc-Clang-ASM.cmake  valicc-Clang-C.cmake  valicc-Clang-CXX.cmake  valicc-Clang.cmake  valicc.cmake
unit_tests/: CMakeLists.txt  common.h  fread_tests.c  map_parser_test.c  stdio_mock.h
(+4499 files in other folders)
